--- a/Daramkun.Blockar/Daramkun.Blockar.csproj
+++ b/Daramkun.Blockar/Daramkun.Blockar.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Daramkun.Blockar</RootNamespace>
-    <AssemblyName>Daramkun.Data</AssemblyName>
+    <AssemblyName>Daramkun.Blockar</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile136</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -36,6 +36,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\EncodingChecker.cs" />
     <Compile Include="Ini\IniParser.cs" />
     <Compile Include="Ini\IniSection.cs" />
     <Compile Include="Json\InnerArrayAttribute.cs" />
