--- a/Daramkun.Blockar.Test/ini1.ini
+++ b/Daramkun.Blockar.Test/ini1.ini
@@ -3,7 +3,7 @@
 startup=true				; Launch in Startup of OS
 resolution=1920*1080		; Fullscreen Resolution
 isfullscreen=true			; Is Fullscreen?
-args=
+args=						; Empty block
 
 ; User information in app
 [user]
