--- a/Blockar.Test/Blockar.Test.csproj
+++ b/Blockar.Test/Blockar.Test.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Blockar\Blockar.csproj" />
   </ItemGroup>
 
